--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#Form">Contact</a></li>
     </ul>
  </div>
 </header>
@@ -73,7 +73,7 @@ Reuters’ sources revealed nothing else, but the leak serves at least in part t
 
     
 <section class="file">
-<h1>Contact form</h1>
+<h1 id="Form">Contact form</h1>
 
 </section>
 
