changed menu to fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-<!-- top bar -->
+<!-- nav bar -->
 <section>
 
     <header class="menu">
@@ -72,7 +72,7 @@ Reuters’ sources revealed nothing else, but the leak serves at least in part t
     </article>
 
     
-<section class="file">
+<section class="file1">
 <h1 id="Form">Contact form</h1>
 
 </section>
