--- a/index.html
+++ b/index.html
@@ -72,25 +72,26 @@ Reuters’ sources revealed nothing else, but the leak serves at least in part t
     </article>
 
     
-<section class="file1">
-<h1 id="Form">Contact form</h1>
+<section>
+<h1>Contact form</h1>
 
 </section>
 
  <!-- Contact Form -->
 
-<div class="Contact form">
+<div>
+    
     <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name">
+    <input type="text" id="fname" name="firstname" placeholder="Your name" required minlenght="3">
 <br>
     <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Last name">
+    <input type="text" id="lname" name="lastname" placeholder="Last name" required minlenght="3">
 <br>
-    <label for="email">Email</label>
-    <input type="text" id="email" name="email" placeholder="Your email">
+    <label for="email">Email   </label>
+    <input type="email" id="email" name="email" placeholder="Your email" required minlenght="3">
 
    
-    <input type="send" value="Send">
+    <input type="button" value="Send" >
 </div>
 </main>
 
